--- a/index.html
+++ b/index.html
@@ -20,49 +20,51 @@
     </head>
     <body>
         <section id="title">
-            <div id="carouselExampleSlidesOnly" class="carousel slide z-n1 position-absolute"
-                        data-bs-ride="carousel" data-bs-touch="false" data-bs-pause="false">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-interval="3000">
-                                <img
-                                    src="images/pexels-moh-adbelghaffar-914798 (1).jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Nurturing Earth's Gifts</h5>
-                                    <p>The care of the Earth is our most ancient
-                                        and most worthy, and after all our most
-                                        pleasing responsibility.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item" data-bs-interval="3000">
-                                <img
-                                    src="images/pexels-chi-n-ba-3626645-10713035 neww.jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Harmony with Nature</h5>
-                                    <p>Organic farming appealed to me because it
-                                        involved searching for and discovering
-                                        nature's pathways, as opposed to the
-                                        formulaic approach of chemical
-                                        farming.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item" data-bs-interval="3000">
-                                <img
-                                    src="images/pexels-rdne-7782158 (1).jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>A Greener Legacy</h5>
-                                    <p>Organic farming is not just a way of
-                                        growing crops; it is a way of life that
-                                        embraces harmony with nature, respect
-                                        for biodiversity, and a commitment to
-                                        leaving a healthier planet for future
-                                        generations.</p>
-                                </div>
-                            </div>
+            <div id="carouselExampleSlidesOnly"
+                class="carousel slide z-n1 position-absolute"
+                data-bs-ride="carousel" data-bs-touch="false"
+                data-bs-pause="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img
+                            src="images/pexels-moh-adbelghaffar-914798 (1).jpg"
+                            class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Nurturing Earth's Gifts</h5>
+                            <p>The care of the Earth is our most ancient
+                                and most worthy, and after all our most
+                                pleasing responsibility.</p>
                         </div>
                     </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img
+                            src="images/pexels-chi-n-ba-3626645-10713035 neww.jpg"
+                            class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Harmony with Nature</h5>
+                            <p>Organic farming appealed to me because it
+                                involved searching for and discovering
+                                nature's pathways, as opposed to the
+                                formulaic approach of chemical
+                                farming.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img
+                            src="images/pexels-rdne-7782158 (1).jpg"
+                            class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>A Greener Legacy</h5>
+                            <p>Organic farming is not just a way of
+                                growing crops; it is a way of life that
+                                embraces harmony with nature, respect
+                                for biodiversity, and a commitment to
+                                leaving a healthier planet for future
+                                generations.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container-fluid">
                 <nav class="navbar navbar-dark navbar-expand-lg fs-5">
                     <div class="container-fluid">
@@ -83,62 +85,19 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link"
+                                    <a class="nav-link active"
                                         aria-current="page" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
+                                    <a class="nav-link" href="#">Products</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link"
-                                        aria-disabled="true">Pricing</a>
+                                        aria-disabled="true">About</a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
-                    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide"
-                        data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img
-                                    src="images/pexels-moh-adbelghaffar-914798.jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Nurturing Earth's Gifts</h5>
-                                    <p>The care of the Earth is our most ancient
-                                        and most worthy, and after all our most
-                                        pleasing responsibility.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item carousel-dark">
-                                <img
-                                    src="images/pexels-quang-nguyen-vinh-222549-6713499.jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Harmony with Nature</h5>
-                                    <p>Organic farming appealed to me because it
-                                        involved searching for and discovering
-                                        nature's pathways, as opposed to the
-                                        formulaic approach of chemical
-                                        farming.</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img
-                                    src="images/pexels-rdne-7782158.jpg"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>A Greener Legacy</h5>
-                                    <p>Organic farming is not just a way of
-                                        growing crops; it is a way of life that
-                                        embraces harmony with nature, respect
-                                        for biodiversity, and a commitment to
-                                        leaving a healthier planet for future
-                                        generations.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
